Forum Browser Changelog

Current Version : 0.7.7

*** 0.7.7 ***

Re-designed Posts interface
Added Post view with links and images side menus

*** 0.7.6 ***

Added simplejson import to addon.xml

*** 0.7.5 ***

Fixed some color handling in posts
Fixed some code box handling in posts
Improved post editing preview
Added forum.dvhk.pl
Added ability to handle fourms which require login
Add ability to translate posts with Google Translate
Added language option in settings
Added progress indicators for all windows
Finished strings.xml for translatablity
Added ability to follow thread and post links

*** 0.7.4 ***

Fixed a bug handling unicode chars in posts
Added the ability to view image links
Added the ability to download links
Improved post formatting handling
Fixed post quote handling regex for xbmc.org/boxee.tv

*** 0.7.3 ***

Initial public beta release