@@ -6,6 +6,7 @@ Current Version : 0.7.7
 
 Re-designed Posts interface
 Added Post view with links and images side menus
+Added Polish translation - thanks to scalpel
 
 *** 0.7.6 ***
 
